syntax = "proto3";

package rpc;

option go_package="./rpc";

import "google/protobuf/struct.proto";

message CommandRequest {
  optional string Command = 1;
  optional string subCommand = 2;
  map<string, google.protobuf.Value> params = 3;
}

message CommandRespond {
  optional int32 status = 1;
  optional string msg = 2;
}

service CommandService {
  rpc CommandProxy(CommandRequest) returns (CommandRespond);
}